fix(junior): handle wrap for safari in mission card

--- a/junior/app/styles/components/mission-card/card.scss
+++ b/junior/app/styles/components/mission-card/card.scss
@@ -157,7 +157,7 @@
         font-size: 22.38px;
         line-height: normal;
         text-align: center;
-        text-wrap: wrap;
+        white-space: break-spaces;
       }
     }
   }
